--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 
 *.Zip
+
+### LTspice ###
+# gitignore template for LTspice
+# website: https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html
+
+# Logfile
+*.log
+
+# Simulation Outputs
+*.raw
+*.fft
+
+# Netlist
+*.net
+
+# End of https://www.gitignore.io/api/altium,ltspice
